Fix scrollbar layout shift (except for Safari)

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,6 +8,7 @@
     -moz-osx-font-smoothing: grayscale;
     height: 100%;
     min-height: 100%;
+    scrollbar-gutter: stable;
   }
 
   body {
